--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@lottiefiles/dotlottie-react": "^0.14.1",
     "@opennextjs/cloudflare": "^1.2.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-label": "^2.1.7",
